# zk-state-machine

./: .gitignore  Cargo.toml  README.md  main.py
contracts/: foundry.toml
contracts/script/: StateMachineDeploy.s.sol  StateMachineDeploy.s.sol.tmp
contracts/src/: StateMachine.sol  StateMachineVerifier.sol
contracts/src/fixtures/: groth16-zk-state-machine-fixture-deposit-a.json  groth16-zk-state-machine-fixture-deposit-b.json  groth16-zk-state-machine-fixture-rotate.json  groth16-zk-state-machine-fixture-send.json  groth16-zk-state-machine-fixture-withdraw.json  groth16-zk-state-machine-fixture.json
contracts/test/: Fibonacci.t.sol  StateMachine.t.sol
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  benchmark.sh  benchmark.txt
